--- a/translations/texts/quests/fu_questlines/tutorial/vinj/create_rockbreaker.questtemplate.json
+++ b/translations/texts/quests/fu_questlines/tutorial/vinj/create_rockbreaker.questtemplate.json
@@ -7,7 +7,7 @@
       ]
     },
     "Texts": {
-      "Chs": "与筛分机相比，破岩机速度较慢，且需要更多的能源，但与单与筛分机相比，它可以提取更多资源。 如果条件允许，你可以把破石机升级为更高效率的升级到^orange;碎岩机^reset;。",
+      "Chs": "与筛粉机相比，破岩机速度较慢，且需要更多的能源，但与单与筛分机相比，它可以提取更多资源。 如果条件允许，你可以把破石机升级为更高效率的升级到^orange;碎岩机^reset;。",
       "Eng": "Compared to the Sifter, the Rock Breaker is slower and needs more power, but it allows for much more resource extracting than the Sifter alone. Upgrade to a ^orange;Rock Crusher^reset; when you can, as those are much more efficient."
     }
   },
